--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon --inspect dist/index.js",
+    "watch": "tsc -w",
+    "watchdev": "yarn nodemon --inspect src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongodb": "^4.0.7",
     "@types/uuid": "^8.3.4",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -20,9 +29,6 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  },
-  "scripts": {
-    "dev": "nodemon --inspect dist/index.js",
-    "watch": "tsc -w"
   }
+
 }
