--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/bcrypt-nodejs": "^0.0.31",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
