--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "package-json": "^8.1.0",
     "tsconfig.json": "^1.0.11",
     "uuid": "^8.3.2"
   },
