--- a/package.json
+++ b/package.json
@@ -4,37 +4,33 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --inspect dist/index.js",
     "watch": "tsc -w",
+    "dev": "nodemon --inspect dist/index.js",
     "watchdev": "yarn nodemon --inspect src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/bcrypt-nodejs": "^0.0.31",
-    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
+    "@types/nodemailer": "^6.4.5",
     "@types/uuid": "^8.3.4",
-    "bcrypt": "^5.0.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "package-json": "^8.1.0",
-    "tsconfig.json": "^1.0.11",
+    "nodemailer": "^6.7.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.7.2",
+    "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
