--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/date-fns": "^2.6.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/nodemailer": "^6.4.5",
@@ -25,7 +26,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.7",
+    "nodemailer": "^6.7.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
