--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.8",
+    "rate-limiter-flexible": "^2.3.8",
+    "redis": "^4.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
