--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/nodemailer": "^6.4.5",
@@ -24,7 +25,9 @@
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "express-validator": "^6.14.2",
+    "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.8",
     "rate-limiter-flexible": "^2.3.8",
