--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "express-rate-limit": "^6.5.1",
     "express-validator": "^6.14.2",
     "ioredis": "^5.2.2",
+    "is-ip": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.7.8",
     "rate-limiter-flexible": "^2.3.8",
     "redis": "^4.2.0",
+    "request-ip": "^3.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
