--- a/package.json
+++ b/package.json
@@ -11,30 +11,20 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
-    "@types/date-fns": "^2.6.0",
-    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/nodemailer": "^6.4.5",
     "@types/uuid": "^8.3.4",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-rate-limit": "^6.5.1",
     "express-validator": "^6.14.2",
-    "ioredis": "^5.2.2",
-    "is-ip": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "node-cache": "^5.1.2",
-    "nodemailer": "^6.7.8",
-    "rate-limiter-flexible": "^2.3.8",
-    "redis": "^4.2.0",
-    "request-ip": "^3.3.0",
+    "nodemailer": "^6.7.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
