--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "node": "^16.17.0",
     "nodemailer": "^6.7.7",
     "uuid": "^8.3.2"
   },
@@ -31,7 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.3",
     "nodemon": "^2.0.19",
-    "ts-node": "^10.8.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
