--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^6.5.3",
     "node": "^16.17.0",
     "nodemailer": "^6.7.7",
     "uuid": "^8.3.2"
