--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "inversify": "5.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoos": "^0.0.1-security",
     "mongoose": "^6.5.3",
     "node": "^16.17.0",
     "nodemailer": "^6.7.7",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
